# wakeywakey

./: CMakeLists.txt
data/: CMakeLists.txt  wakeywakey.desktop
data/icons/: icon.rc  wakeywakey.icns
data/sprites/dream/: sen1.ini  sen2.ini  sen3.ini  sen4.ini  sen5.ini
data/sprites/fg/: shine.ini  stand.ini
data/sprites/ges1/: sleep.ini  stand.ini
data/sprites/ges2/: buch.ini  wakeup.ini  walk.ini
data/sprites/ges3/: buch.ini  quack.ini  wakeup.ini
src/: common.c  main.c
src/gamestates/: board.c  dosowisko.c  holypangolin.c
